--- a/app/MemberModule/templates/Hlasovani.view.latte
+++ b/app/MemberModule/templates/Hlasovani.view.latte
@@ -40,13 +40,13 @@
 {$anketa->text|texy|noescape}
 
 <p n:if="$anketa->date_add != $anketa->date_update" class="update"
-title="{$anketa->date_update|timeAgoInWords}">Upraveno (<time datetime="{$anketa->date_update|date:'c'}">{$anketa->date_update|date:'%d.%m.%Y %H:%M'}</time>)</p>
+title="{$anketa->date_update|timeAgoInWords}">Upraveno (<time datetime="{$anketa->date_update|datetimeC}">{$anketa->date_update|datetime}</time>)</p>
 </div>
 
 {if $locked}
 <h3 class="center">{include svg icon => lock} Toto hlasování je uzavřeno</h3>
 {else}
-<h3 class="center">Toto hlasování bude uzavřeno <span class="hint" title="{$anketa->date_deatline|date:'%d.%m.%Y'}">
+<h3 class="center">Toto hlasování bude uzavřeno <span class="hint" title="{$anketa->date_deatline|date:'d.m.Y'}">
 {$anketa->date_deatline|timeAgoInWords}</span></h3>
 {/if}
 
