--- a/app/CronModule/templates/Message.send.latte
+++ b/app/CronModule/templates/Message.send.latte
@@ -1,5 +1,5 @@
 {ifset $items}
 	{foreach $items as $id => $item}
-		  {$id} {$item|date:'d.m.Y H:i:s'}<br />
+		  {$id} {$item|datetime'}<br />
 	{/foreach}
 {/ifset}
