--- a/app/CronModule/templates/Photo.photostime.latte
+++ b/app/CronModule/templates/Photo.photostime.latte
@@ -1,3 +1,3 @@
 <ul n:inner-foreach="$images as $filename => $datetime">
-	<li>{$filename} => {$datetime|date:'c'}</li>
+	<li>{$filename} => {$datetime|datetimeC}</li>
 </ul>
