--- a/app/PhotoModule/templates/Myself.default.latte
+++ b/app/PhotoModule/templates/Myself.default.latte
@@ -26,8 +26,8 @@ ul { list-style: disc;}
 
 <h2 n:block="title">Můj účet</h2>
 
-<p>Dnes je: <b><time datetime="{$date_now|date:'c'}">{$date_now|date:'%A %d.%m.%Y %H:%M'}</time></b>.
-    Naposledy jste byl přihlášen: <b><time datetime="{$date_last|date:'c'}">{$date_last|date:'%A %d.%m.%Y %H:%M'}</time></b>.</p>
+<p>Dnes je: <b><time datetime="{$date_now|datetimeC}">{$date_now|datetimeN}</time></b>.
+    Naposledy jste byl přihlášen: <b><time datetime="{$date_last|datetimeC}">{$date_last|datetimeN}</time></b>.</p>
 
 {if}
 <h2>Novinky</h2>
