--- a/app/presenters/templates/Mail/newMember.latte
+++ b/app/presenters/templates/Mail/newMember.latte
@@ -3,7 +3,7 @@
 Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.
 
 Svoje heslo si můžeš nastavit na adrese: {link //:Account:Sign:restorePassword pubkey => $session->pubkey}
- Tento odkaz bude fungovat 24 hodin (do {$session->date_end|date:'d.m.Y H:i:s'})
+ Tento odkaz bude fungovat 24 hodin (do {$session->date_end|datetime})
 
 Svůj profil najdeš na adrese: {link //:Member:User:profile}
  Zde si upravit své osobní údaje.
