Using shorter version of include svg block

--- a/app/AccountModule/templates/@layout.latte
+++ b/app/AccountModule/templates/@layout.latte
@@ -1,4 +1,4 @@
-{define svg}
+{define svg $icon, $class}
 	<svg n:class='icon, "icon-$icon", isset($class) ? $class'><use xlink:href="http://localhost/vzsjablonec/account/img/symbols.svg#icon-{$icon}"></use></svg>
 {/define}
 
