--- a/app/MemberModule/templates/User.edit.latte
+++ b/app/MemberModule/templates/User.edit.latte
@@ -39,7 +39,7 @@
 	<ul class="buttonMenu" n:ifset="$id" n:if="($user->id == $id)">
 		<li>
 			<a class="buttonLike" n:href="password $id">
-				{include svg icon => pencil} změna hesla
+				{include svg pencil} změna hesla
 			</a>
 		</li>
 	</ul>
