--- a/app/AccountModule/templates/Sign.in.latte
+++ b/app/AccountModule/templates/Sign.in.latte
@@ -16,12 +16,12 @@
 		<section class="social-login">
 			<p>
 				<a rel="nofollow" n:class="google, $googleLastLogin ? last-login" title="Přihlásit se pomocí Googlu" href="{$googleLoginUrl}">
-					{include svg icon => google-plus} Přihlásit se přes Google
+					{include svg google-plus} Přihlásit se přes Google
 				</a>
 			</p>
 			<p>
 				<a rel="nofollow" n:class="facebook, $facebookLastLogin ? last-login" title="Přihlásit se pomocí Facebooku" href="{$facebookLoginUrl}">
-					{include svg icon => facebook} Přihlásit se přes Facebook
+					{include svg facebook} Přihlásit se přes Facebook
 				</a>
 			</p>
 		</section>
