--- a/app/MemberModule/templates/@svg.latte
+++ b/app/MemberModule/templates/@svg.latte
@@ -1,3 +1,3 @@
-{define svg}
+{define svg $icon, $class}
 	<svg n:class='icon, "icon-$icon", isset($class) ? $class'><use xlink:href="http://localhost/vzsjablonec/member/img/symbols.svg#icon-{$icon}"></use></svg>
 {/define}
