--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -32,36 +32,36 @@
 
 <ul n:if="$user->isInRole('member')" class="buttonMenu" n:snippet="menuOnTop">
     {if $user->isInRole('admin') or array_key_exists($user->id,$orgList)}
-    <li><a class="buttonLike" n:href="edit, $akce->id">{include svg icon => pencil} editovat</a></li>
+    <li><a class="buttonLike" n:href="edit, $akce->id">{include svg pencil} editovat</a></li>
     <li><a class="buttonLike confirm" data-query="Opravdu chcete akci smazat?" n:href="delete, $akce->id">
-    {include svg icon => trash} smazat</a></li>
+    {include svg trash} smazat</a></li>
     {/if}
 
     {if $user->isInRole('confirm')}
         {if !$akce->confirm}
-        <li><a class="buttonLike" n:href="allow, $akce->id, TRUE">{include svg icon => check} povolit</a></li>
+        <li><a class="buttonLike" n:href="allow, $akce->id, TRUE">{include svg check} povolit</a></li>
         {else}
-        <li><a class="buttonLike" n:href="allow, $akce->id, 0">{include svg icon => ban} zakázat</a></li>
+        <li><a class="buttonLike" n:href="allow, $akce->id, 0">{include svg ban} zakázat</a></li>
         {/if}
     {/if}
 </ul>
 
     <h2>{$akce->name|firstUpper}</h2>
 
-    <p n:if="!$akce->confirm" class="red">{include svg icon => ban} Tato akce není schválena!</p>
+    <p n:if="!$akce->confirm" class="red">{include svg ban} Tato akce není schválena!</p>
 
     <div class="prev-next">
         <a n:tag-if="$next" class="buttonLike float-right" n:href="Akce:view, $next->id">
-            <span n:tag-if="!$next" class="buttonLike float-right gray">Další {include svg icon => forward}</span>
+            <span n:tag-if="!$next" class="buttonLike float-right gray">Další {include svg forward}</span>
         </a>
 
         <a n:tag-if="$prev" class="buttonLike" n:href="Akce:view, $prev->id">
-            <span n:tag-if="!$prev" class="buttonLike gray">{include svg icon => backward} Předchozí</span>
+            <span n:tag-if="!$prev" class="buttonLike gray">{include svg backward} Předchozí</span>
         </a>
     </div>
 
     <h3 title="{$akce->date_start|timeAgoInWords}">
-		{include svg icon => calendar} <time datetime="{$akce->date_start|datetimeC}">{$akce->date_start|datetimeN} -
+		{include svg calendar} <time datetime="{$akce->date_start|datetimeC}">{$akce->date_start|datetimeN} -
         {if $moreOneDay}{$akce->date_end|datetimeN} {else}{$akce->date_end|date:'H:i'}{/if}</time>
         (<time>{$akce->date_start|durationInWords:$akce->date_end}</time>)
     </h3>
@@ -70,16 +70,16 @@
         <span class="icon-calendar-times-o" title="Přihlášení do"></span> přihlášení do: <time datetime="{$akce->date_deatline|datetimeC}">{$akce->date_deatline|datetimeN}</time> ({$akce->date_deatline|timeAgoInWords})
     </div>
 
-    <p title="Místo">{include svg icon => map-marker} {$akce->place}
-        <sup><a href="https://mapy.cz/zakladni?q={$akce->place|escapeurl}" target="_blank" title="Hledat na Mapy.cz">{include svg icon => search}Mapy.cz</a></sup></p>
+    <p title="Místo">{include svg map-marker} {$akce->place}
+        <sup><a href="https://mapy.cz/zakladni?q={$akce->place|escapeurl}" target="_blank" title="Hledat na Mapy.cz">{include svg search}Mapy.cz</a></sup></p>
 
-    <p n:if="$akce->member_id" title="Zodpovědná osoba">{include svg icon => user-o} <a n:tag-if="$akce->member->role" n:href="User:view $akce->member_id">{$akce->member->surname} {$akce->member->name}</a></p>
+    <p n:if="$akce->member_id" title="Zodpovědná osoba">{include svg user-o} <a n:tag-if="$akce->member->role" n:href="User:view $akce->member_id">{$akce->member->surname} {$akce->member->name}</a></p>
 
-    <p>{include svg icon => tag} {$akce->akce_for->text}{if $akce->visible}, viditelná veřejnosti{else}, viditelná pouze členům{/if}</p>
+    <p>{include svg tag} {$akce->akce_for->text}{if $akce->visible}, viditelná veřejnosti{else}, viditelná pouze členům{/if}</p>
 
-    <p n:if="$akce->file">{include svg icon => file-text-o} <a target="_blank" href="{$basePath}/doc/akce/{$akce->file}">{$akce->file}</a></p>
+    <p n:if="$akce->file">{include svg file-text-o} <a target="_blank" href="{$basePath}/doc/akce/{$akce->file}">{$akce->file}</a></p>
 
-    <p n:if="$akce->price">{include svg icon => dollar}{$akce->price} Kč</p>
+    <p n:if="$akce->price">{include svg dollar}{$akce->price} Kč</p>
 
 <p n:if="(!$akceIsOld) and ($akce->date_add != $akce->date_update)" 
         class="update" title="{$akce->date_update|timeAgoInWords}">Upraveno <time datetime="{$album->date|datetimeC}">{$akce->date_update|datetime}</time></p>
@@ -102,14 +102,14 @@
 {control signEvent}
 
     <p n:if="$user->isInRole('admin') or (($user->isInRole('member'))and(array_key_exists($user->id,$orgList)))" id="mail">
-        <a class="buttonLike" n:href="Mail:akce $akce->id">{include svg icon => envelope} poslat mail účastníkům</a>
+        <a class="buttonLike" n:href="Mail:akce $akce->id">{include svg envelope} poslat mail účastníkům</a>
     </p>
 
     {if $akceIsOld}
         {if $akce->report}
             <h3>Záznam o akci</h3>
             <p>
-                <a class="buttonLike" n:href="Report:view $akce->id"> {include svg icon => book} náhled</a>
+                <a class="buttonLike" n:href="Report:view $akce->id"> {include svg book} náhled</a>
             </p>
         {/if}
 
@@ -118,13 +118,13 @@
             <div class="texy">
                 {$akce->message|texy|noescape}
             </div>
-            {*<p><a class="buttonLike" n:href="Akce:editReport $akce->id">{include svg icon => pencil} editovat</a></p>*}
+            {*<p><a class="buttonLike" n:href="Akce:editReport $akce->id">{include svg pencil} editovat</a></p>*}
         {/if}
 
         {control rating}
 
         {if (($user->isInRole('member'))and(($akce->bill)or(array_key_exists($user->id,$orgList))))}
-        <h3>Vyúčtování {include svg icon => dollar}</h3>
+        <h3>Vyúčtování {include svg dollar}</h3>
         {form uploadBillForm}
             <ul class="error" n:if="$form->hasErrors()">
                 <li n:foreach="$form->errors as $error">{$error}</li>
@@ -135,14 +135,14 @@
 					{input file}
 
 					<button n:name="ok" class="buttonLike">
-						{include svg icon => upload} nahrát
+						{include svg upload} nahrát
 					</button>
 				{/if}
             </p>
         {/form}
 
 			<p n:if="($akce->bill)and($user->isInRole('member'))">
-                <a class="buttonLike" href="{$basePath}/doc/vyuctovani/{$akce->id}-{$akce->name|webalize}.xls">{include svg icon => download} stáhnout</a>
+                <a class="buttonLike" href="{$basePath}/doc/vyuctovani/{$akce->id}-{$akce->name|webalize}.xls">{include svg download} stáhnout</a>
             </p>
 
 		{/if}
@@ -150,13 +150,13 @@
 
 {if $akce->album_id}
 <hr>
-<h3>Fotografie {include svg icon => image}</h3>
+<h3>Fotografie {include svg image}</h3>
 {control album $akce->album_id}
 {/if}
 
 {if $akce->anketa_id}
 <hr>
-<h3>Anketa {include svg icon => list-ul}</h3>
+<h3>Anketa {include svg list-ul}</h3>
 
 <p><a n:href="Ankety:view $akce->anketa_id" n:tag-if="$user->isInRole('member')">{$anketa->title|firstUpper}</a><p>
 
@@ -165,9 +165,9 @@
 
 {if $akce->forum_topic_id}
 <hr>
-<h3>Poslední příspěvky {include svg icon => comments-o}</h3>
+<h3>Poslední příspěvky {include svg comments-o}</h3>
 
-<a n:if="(!$topic->locked)and($user->isInRole('member'))" class="buttonLike float-right" n:href="Forum:add $topic->id">{include svg icon => plus} nový příspěvěk</a>
+<a n:if="(!$topic->locked)and($user->isInRole('member'))" class="buttonLike float-right" n:href="Forum:add $topic->id">{include svg plus} nový příspěvěk</a>
 
 <ul class="inline-nav">
 <li><a n:href="Forum:">Fórum</a></li>
