--- a/app/MemberModule/templates/Forum.category.latte
+++ b/app/MemberModule/templates/Forum.category.latte
@@ -44,11 +44,11 @@
 <div class="right">{control vp}</div>
 
 <p class="float-right">
-	<a n:href="Feed:forum category => $forum->id" class="buttonLike">{include svg icon => feed} RSS této kategorie</a>
+	<a n:href="Feed:forum category => $forum->id" class="buttonLike">{include svg feed} RSS této kategorie</a>
 </p>
 
 <p>
-	<a n:href="search,null,$forum->id" class="buttonLike">{include svg icon => search} Hledat ve fóru</a>
+	<a n:href="search,null,$forum->id" class="buttonLike">{include svg search} Hledat ve fóru</a>
 </p>
 
 {if $user->isInRole('member')}
