--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -42,14 +42,14 @@
 	{control searchForm}
 </div>
 
-<h2><span class="no-wrap" title="Toto téma bylo uzavřeno" n:if="$topic->locked">{include svg icon => lock}</span> {$topic->title|firstUpper}</h2>
+<h2><span class="no-wrap" title="Toto téma bylo uzavřeno" n:if="$topic->locked">{include svg lock}</span> {$topic->title|firstUpper}</h2>
 
 {control postsList}
 
 <div class="right">{control vp}</div>
 
 <p class="right">
-	<a n:href="Feed:forum topic => $topic->id" class="buttonLike">{include svg icon => feed} RSS tohoto tématu</a>
+	<a n:href="Feed:forum topic => $topic->id" class="buttonLike">{include svg feed} RSS tohoto tématu</a>
 </p>
 
 {if (!$topic->locked) and ($user->isInRole('member'))}
