block macro for search link to Mapy.cz

--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -9,6 +9,10 @@
 
 {import '@svg.latte'}
 
+{define mapy $place}
+	<sup><a href="https://mapy.cz/zakladni?q={$place|escapeurl}" target="_blank" title="Hledat na Mapy.cz">{include svg search}Mapy.cz</a></sup>
+{/define}
+
 <!DOCTYPE html>
 <html lang="cs">
 <head>
