--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -5,6 +5,8 @@
 
 		.buttonMenu, .buttonMenu li { float: none; }
 
+		h3 sup { font-weight: normal;}
+
 		.card { position: relative; color: white; margin-top: 1em; max-width: 53em;}
 		.card, .square table { font-family: Arial, 'sans-serif';}
 		.line { display: none; }
@@ -122,7 +124,7 @@
 		<p n:if="$age"><b>Věk:</b> {$age->format('%y')}</p>
 	{/if}
 
-	<h3>{include svg address-book-o} Kontakty:</h3>
+	<h3>{include svg address-book-o} Kontakty</h3>
 	<ul class="bullet-less">
 		<li n:if="$member->mail">
 			{include svg envelope} <b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a>
@@ -141,7 +143,7 @@
 	<p>{include svg building} <b>Zaměstnání/Škola:</b> {$member->zamestnani}</p>
 
 	{if $user->isInRole('member')}
-		<h3>{include svg map-marker} Adresa:</h3>
+		<h3>{include svg map-marker} Adresa {include mapy $member->ulice.' '.$member->mesto}</h3>
 		<address class="out">
 			{$member->ulice}<br>
 			{$member->mesto}
